--- a/src/components/AddNewCourseButton/AddNewCourseButton.css
+++ b/src/components/AddNewCourseButton/AddNewCourseButton.css
@@ -1,4 +1,4 @@
-.add-btn {
+/* .add-btn {
   background-color: #d63384;
   color: white;
   border: none;
@@ -6,4 +6,4 @@
   border-radius: 6px;
   font-weight: bold;
   cursor: pointer;
-}
+} */
