--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100%;
+  overflow-x: hidden;   
+  font-family: 'Poppins', sans-serif;
+}
+
+
+
 .App {
   display: flex;
 }
