--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@keyframes grow-from-dot-on-hover {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
 @custom-variant dark (&:is(.dark *));
 
 /* :root {
