--- a/src/components/Course/AddCourseForm.css
+++ b/src/components/Course/AddCourseForm.css
@@ -73,6 +73,10 @@ textarea {
   margin-bottom: 6px;
   color: blue;
   justify-content: center;
+  background-color: blue ;
+  width: 32px;
+  height: 32px;
+
 }
 
 .button-row {
@@ -99,4 +103,22 @@ textarea {
   border-radius: 6px;
   font-weight: 500;
   cursor: pointer;
+}
+.thank-you-message {
+  padding: 80px;
+  text-align: center;
+  background-color: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.thank-you-message h2 {
+  color: #e00076;
+  margin-bottom: 10px;
+  font-size: 26px;
+}
+
+.thank-you-message p {
+  font-size: 16px;
+  color:#555;
 }
