--- a/src/components/Filter/FilterSection.css
+++ b/src/components/Filter/FilterSection.css
@@ -12,12 +12,22 @@ body {
   padding: 40px;
   box-sizing: border-box;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .filter-container {
   width: 100%;
   max-width: 1200px;
+}
+
+.top-heading {
+  font-size: 24px;
+  font-weight: 600;
+  color: #716f6f;
+  margin-left: 5px;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  text-transform: capitalize;
 }
 
 .top-bar {
@@ -38,26 +48,8 @@ body {
   cursor: pointer;
   align-items: center;
   gap: 8px;
-}
-.filter-btn-content {
   display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-
-
-
-
-.top-heading {
-  font-family: "Poppins", sans-serif;
-  font-size: 24px;
-  font-weight: 600;
-  color: #716f6f;
-  margin-left: 5px;
-  margin-top: 40px;
-  margin-bottom: 20px;
-  text-transform: capitalize;
+  font-size: 16px;
 }
 
 .filter-icon {
@@ -65,6 +57,18 @@ body {
   height: 18px;
 }
 
+.add-icon {
+  font-size: 26px;
+  font-weight: 100;
+  margin-right: 8px;
+  line-height: 1;
+}
+
+.filter-btn-content {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
 
 .search-box-outside {
   margin-top: 20px;
@@ -72,7 +76,7 @@ body {
 }
 
 .search-box-outside .search-input {
-  width: 280px;
+  width: 298px;
   padding: 10px;
   border: 1px solid #ca406f;
   border-radius: 6px;
@@ -113,4 +117,17 @@ body {
   border: 1px solid #ccc;
   border-radius: 6px;
   font-size: 14px;
+}
+
+.course-card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-top: 40px;
+}
+
+.inside-filter {
+  margin-top: 30px;
+  padding-top: 20px;
+  border-top: 1px solid #eee;
 }
