--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
 @import "tailwindcss";
+
+
+
+
 @import "tw-animate-css";
 
 @keyframes grow-from-dot-on-hover {
