--- a/src/pages/courses/Course/AddCourseForm.css
+++ b/src/pages/courses/Course/AddCourseForm.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 .add-course-form {
   max-width: 1278px;
@@ -73,7 +73,7 @@ textarea {
   margin-bottom: 6px;
   color: blue;
   justify-content: center;
-  background-color: blue ;
+  
   width: 32px;
   height: 32px;
 
@@ -121,4 +121,4 @@ textarea {
 .thank-you-message p {
   font-size: 16px;
   color:#555;
-}
+} */
