--- a/src/pages/courses/CourseCard/CourseCard.css
+++ b/src/pages/courses/CourseCard/CourseCard.css
@@ -1,4 +1,4 @@
-.course-card {
+/* .course-card {
   background: #fff;
   border-radius: 16px;
   padding: 20px;
@@ -118,4 +118,4 @@
   border-radius: 8px;
   font-weight: 600;
   cursor: pointer;
-}
+} */
