--- a/src/pages/courses/CourseDetail/CourseDetail.css
+++ b/src/pages/courses/CourseDetail/CourseDetail.css
@@ -1,4 +1,4 @@
-.course-details-wrapper {
+/* .course-details-wrapper {
   padding: 40px;
   background-color: #fce4ec;
   min-height: 100vh;
@@ -70,4 +70,4 @@
   font-weight: 600;
   border: none;
   border-radius: 6px;
-}
+} */
