--- a/src/pages/courses/Filter/FilterSection.css
+++ b/src/pages/courses/Filter/FilterSection.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 
 body {
   font-family: "Poppins", sans-serif;
@@ -130,4 +130,4 @@ body {
   margin-top: 30px;
   padding-top: 20px;
   border-top: 1px solid #eee;
-}
+} */
