correction in db

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,18 @@
   }
 }
 
+
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+
 @custom-variant dark (&:is(.dark *));
 
 
