--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,22 @@
     transform: scale(1);
   }
 }
+no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+
+
 
 @custom-variant dark (&:is(.dark *));
+
+
 
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
