LMS page corrections done

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,14 @@
 
 @custom-variant dark (&:is(.dark *));
 
+.no-scrollbar {
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+}
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none; 
+}
 /*
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
